tests/neg-custom-args/captures/consume-in-constructor.check
-- Error: tests/neg-custom-args/captures/consume-in-constructor.scala:18:10 --------------------------------------------
18 |  println(b) // error
   |          ^
   |          Separation failure: Illegal access to {b} which is hidden by the previous definition
   |          of value a2 with type A2{val b: B^{b²}}^.
   |          This type hides capabilities  {cap, b²}
   |
   |          where:    ^   refers to a fresh root capability in the type of value a2
   |                    b   is a value in class A2
   |                    b²  is a value in method Test
   |                    cap is a fresh root capability created in value a2 when constructing instance A2
-- Error: tests/neg-custom-args/captures/consume-in-constructor.scala:19:10 --------------------------------------------
19 |  println(a1) // error, since `b` was consumed before
   |          ^^
   |          Separation failure: Illegal access to {b} which is hidden by the previous definition
   |          of value a2 with type A2{val b: B^{b²}}^.
   |          This type hides capabilities  {cap, b²}
   |
   |          where:    ^   refers to a fresh root capability in the type of value a2
   |                    b   is a value in class A2
   |                    b²  is a value in method Test
   |                    cap is a fresh root capability created in value a2 when constructing instance A2
-- Error: tests/neg-custom-args/captures/consume-in-constructor.scala:25:10 --------------------------------------------
25 |  println(b) // error, b is hidden in the type of a1
   |          ^
   |          Separation failure: Illegal access to {b} which is hidden by the previous definition
   |          of value a1 with type A1^.
   |          This type hides capabilities  {cap, b}
   |
   |          where:    ^   refers to a fresh root capability in the type of value a1
   |                    cap is a fresh root capability created in value a1 when constructing instance A1
